Video: Fix display issues on IE

--- a/source/sass/components/@health/_health-video.scss
+++ b/source/sass/components/@health/_health-video.scss
@@ -12,7 +12,6 @@
 
   &__preview {
 
-    display: inline-block;
     position: relative;
     line-height: 0;
 
@@ -31,7 +30,7 @@
     }
 
     &__link {
-      display: inline-block;
+      display: block;
       &:hover,
       &:active,
       &:focus {
